type Comment = {
  id: number,
  owner_id: number,
  auction_id: number,
  message?: string,
  date?: string
  owner?: string
}

export default Comment
