type Lot = {
  id: number,
  name?: String,
  preview?: String,
  userId?: number,
}

export default Lot
