type User = {
  firstName?: string
  lastName?: string
  login: string,
  email: string,
  user_id: number
  exp: number
}

export default User
